[project]
name = "litestar-hockey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.9.3",
    "asyncpg>=0.31.0",
    "litestar[full]>=2.21.1",
    "pydantic-settings>=2.14.0",
    "uuid-utils>=0.14.1",
]

[tool.flake8]
max-line-length = 120

[tool.litestar]
app = "app:app"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
